# open-space

./: .gitignore  CMakeLists.txt  PlanetCollision.md  README.md  SpaceshipControl.cpp  SpaceshipControl.h  conanfile.py  conanfile.txt  imgui.ini  imgui.json  settings.json
assets/models/: airplaneUdemy.dae  airplaneUdemy.mtl  camera.blend  camera.blend1  camera.dae  cube.blend  cube.dae  cylinder.blend  cylinder.dae  ico-sphere.blend  ico-sphere.blend1  ico-sphere.dae  ico-sphere.mtl  icosphere-low.dae  plane.blend  plane.dae
assets/shaders/: finalBloom.frag  gaussianBlur.frag  gaussianBlur.vert  grid.frag  highlight.frag  mesh.frag  mesh.vert  meshTexture.frag  meshTexture.vert  meshWithLight.frag  meshWithLight.vert  nebula.frag  nebula.vert  planet.frag  planet.vert  skybox.frag  skybox.vert  skyboxStar.frag  skyboxStar.vert  starTexture.frag  starTexture.vert  test.frag  test.vert
doc/: Universe.md  VisualStudioOMP.md  uml.mdj
include/: Axis.h  Camera.h  GLContext.h  GLHeader.h  Grid.h  InputManager.h  Mesh.h  Model.cpp  Model.h  RenderSystem.h  RenderSystemOld.h  RenderWindow.h  Shader.h  ShaderProgram.cpp  ShaderProgram.h  Texture.h
include/cg/: Application.h  Axis.h  Cube.cpp  Cube.h  GLContext.h  GLHeader.h  Grid.h  IcoSphere.cpp  IcoSphere.h  Math.h  PlanetGenerator.cpp  PlanetGenerator.h  PlanetSettings.h  PlanetSide.cpp  PlanetSide.h  Skybox.h  SpaceshipControl.h  ViewFrustum.cpp  ViewFrustum.h  ViewPlane.cpp  ViewPlane.h
include/cg/collision/: BoundingSphere.h
include/cg/entities/: Component.h  Entity.h  EntityBuilder.h  EntityManager.h  System.h  UniverseEntityFactory.cpp  UniverseEntityFactory.h
include/cg/entities/components/: CameraComponent.h  CollisionComponent.h  HighlightComponent.cpp  HighlightComponent.h  LightComponent.h  MassComponent.h  MeshComponent.h  OrbitComponent.h  PositionComponent.h  SelectableComponent.h  TransformComponent.h  VelocityComponent.h
include/cg/entities/systems/: CollisionSystem.h  GravitySystem.cpp  GravitySystem.h  InputSystem.h  MovementSystem.h  OrbitSystem.h  RenderSystem.h
include/cg/procedural/: Galaxy.cpp  Galaxy.h  Generator.cpp  Generator.h  Moon.cpp  Moon.h  Planet.cpp  Planet.h  SolarSystem.cpp  SolarSystem.h  Star.cpp  Star.h  Universe.cpp  Universe.h
include/cg/shaders/: Shader.h  ShaderProgram.h
include/cg/skybox/: Skybox.h  SkyboxSettings.h  SkyboxStar.h
include/cg/terrain/: Noise.h  OpenSimplexNoise.h  PerlinNoise.h  Terrain.h  TestNoise.h
include/cg/ui/: EntityWindow.h  PlanetEditor.cpp  PlanetEditor.h  SkyboxEditor.cpp  SkyboxEditor.h  UserInterface.h
include/entities/: Component.h  EntityBuilder.cpp  EntityBuilder.h  EntityManager.h  System.h
include/entities/components/: CameraComponent.h  HighlightComponent.h  MeshComponent.h  PositionComponent.h
include/entities/systems/: InputSystem.h  MovementSystem.h  RenderSystem.h
include/meshes/: Mesh.h  Model.h
include/shaders/: Shader.h
lib/glad/: glad.c  glad.h
lib/glad/glad/: glad.h
lib/imgui/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_internal.h
lib/json/: json.hpp
lib/noise/: OpenSimplexNoise.h
lib/opensimplex-noise/: OpenSimplexNoise.h
src/: Application.cpp  Axis.cpp  Camera.cpp  GLContext.cpp  Grid.cpp  InputManager.cpp  Mesh.cpp  RenderSystem.cpp  RenderSystemOld.cpp  RenderWindow.cpp  Shader.cpp  Skybox.cpp  SpaceshipControl.cpp  main.cpp
src/collision/: BoundingSphere.cpp
src/entities/: Component.cpp  Entity.cpp  EntityBuilder.cpp  EntityManager.cpp  System.cpp
src/entities/components/: CameraComponent.cpp  CollisionComponent.cpp  HighlightComponent.cpp  LightComponent.cpp  MassComponent.cpp  MeshComponent.cpp  OrbitComponent.cpp  PositionComponent.cpp  TransformComponent.cpp  VelocityComponent.cpp
src/entities/systems/: CollisionSystem.cpp  GravitySystem.cpp  InputSystem.cpp  MovementSystem.cpp  OrbitSystem.cpp  RenderSystem.cpp
src/meshes/: Mesh.cpp  Model.cpp  Texture.cpp
src/shaders/: Shader.cpp  ShaderProgram.cpp
src/skybox/: Skybox.cpp  SkyboxStar.cpp
src/terrain/: Noise.cpp  OpenSimplexNoise.cpp  PerlinNoise.cpp  Terrain.cpp
src/ui/: EntityWindow.cpp  UserInterface.cpp
